findbug,pmd修改1